--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+    lintOptions{
+        abortOnError false
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.fotagmobile20575030"
-        minSdkVersion 28
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
